Fix hamburger menu not working when scrolled down on mobile
The accordion click target (#accordionu8349) was in normal document flow
while the visual hamburger icon was position:fixed, causing the click
target to scroll away. Added position:fixed;top:0px to the accordion
in bp_736 and bp_414 breakpoints, matching the pattern already used
in bp_320. Applied to all 4 pages and bumped CSS cache versions.

--- a/css/manufacturers.css
+++ b/css/manufacturers.css
@@ -18,6 +18,6 @@
 @media (min-width: 415px) and (max-width: 736px){#uVencoFooter{left:76.62%;margin-left:0%;}#uVencoImg{margin-top:33px;}#uVencoTitle{width:352px;min-height:30px;margin-top:7px;left:-176px;}#uVencoDesc{width:418px;min-height:133px;margin-top:7px;margin-left:50%;left:-209px;}#buttonuVenco{top:-2px;margin-bottom:40px;}#buttonuVenco:hover{margin-bottom:40px;margin-top:0px;}#uVenco-4{left:6.4%;}}
 @media (min-width: 321px) and (max-width: 414px){#uVencoImg{margin-top:58px;}#uVencoTitle{width:352px;min-height:30px;margin-top:8px;left:-176px;}#uVencoDesc{width:322px;min-height:181px;margin-top:6px;margin-left:50%;left:-161px;}#buttonuVenco{margin-top:1px;margin-bottom:40px;}#buttonuVenco:hover{margin-bottom:40px;margin-top:1px;}#uVenco-4{left:5.61%;}}
 @media (max-width: 320px){#uVencoImg{margin-top:25px;}#uVencoTitle{width:280px;min-height:37px;margin-top:15px;left:-140px;}#uVencoDesc{min-height:248px;margin-top:1px;width:68.75%;left:0%;margin-left:15.63%;}#buttonuVenco{top:-4px;margin-bottom:40px;}#buttonuVenco:hover{margin-bottom:40px;margin-top:0px;}#uVenco-4{left:6.4%;}}
-@media (min-width: 415px) and (max-width: 736px){#u4606-4{min-height:80px;}#u18210{margin-left:calc(50% - 201px);left:0%;}}
-@media (min-width: 321px) and (max-width: 414px){#u14873{margin-left:calc(50% - 44px);}#u14880{margin-left:calc(50% - 98px);}#u18267{margin-left:calc(50% - 47px);}}
+@media (min-width: 415px) and (max-width: 736px){#u4606-4{min-height:80px;}#u18210{margin-left:calc(50% - 201px);left:0%;}#accordionu8349{position:fixed;top:0px;}}
+@media (min-width: 321px) and (max-width: 414px){#u14873{margin-left:calc(50% - 44px);}#u14880{margin-left:calc(50% - 98px);}#u18267{margin-left:calc(50% - 47px);}#accordionu8349{position:fixed;top:0px;}}
 @media (max-width: 320px){#u14873{margin-left:calc(50% - 44px);}#u14880{margin-left:calc(50% - 101px);}#u18267{margin-left:calc(50% - 47px);}}
